# space-coordinates-service

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 3ced2139d05a_init.py
src/: main.py
src/api/v1/: calculate_coordinates.py  dependencies.py  export.py
src/computation/: contracts.py  sgp4_calculator.py
src/core/: config.py  logging.py
src/db/: postgres.py  redis.py
src/middlewares/: limits_wrapper.py  rate_limit.py
src/models/: __init__.py  satellite.py
src/schemas/: calculate_coordinates.py  export.py  satellite_info.py
src/services/: calculation_service.py  export_service.py
tests/api/: conftest.py  test_calculate_coordinates.py
tests/computation/: test_sgp4_calculator.py
tests/services/: test_calculation_service.py  test_export_service.py
