[tool.poetry]
name = "space-coordinates-service"
version = "0.1.0"
description = "Микросервис расчета координат космических аппаратов по орбитальным данным (TLE/SGP4)"
authors = ["Diana Bautina <dianabautina@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.5"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
redis = "^5.1"
numpy = "^2.1"
polars = "^1.9"
sgp4 = "^2.23"
pymap3d = "^3.1"
limits = "^5.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.12"
pytest = "^8.3"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["sgp4.*", "pymap3d.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: требует реальных Postgres/Redis, поднятых заранее (см. Makefile `make test` / .env.test) - не запускается по умолчанию, только через `pytest -m integration`",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
